--- a/config/database.yml
+++ b/config/database.yml
@@ -14,6 +14,9 @@ development:
   <<: *default
   database: pano_development
 
-test:
+test: &test
   <<: *default
   database: pano_test
+
+cucumber:
+  <<: *test
