fix user editing to redirect back to correct page.

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  provider: MyString
-  uid: MyString
-  name: MyString
+<% 100.times do |i| %>
+user_<%=i%>:
+  name: <%=%Q{Peter Paul John Ringo George}%> <%=i%>
+  email: email<%=i%>@test.com
+<%end%>
 
-two:
-  provider: MyString
-  uid: MyString
-  name: MyString
+#200.times do |i| User.create!(name: %w{Peter Paul George Ringo John}.sample + " " + %w{Jones Smith West North Andrews}.sample + i.to_s, email: "email#{i}@wherever.com") end
