--- a/test/fixtures/teams.yml
+++ b/test/fixtures/teams.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  group_id: 
+  name: GaaP
+  group_id: 1
 
 two:
-  name: MyString
-  group_id: 
+  name: Digital Engagement and Design
+  group_id: 1
