changes to fixtures, added view of latest sub-goal updates into status reporting UI.

--- a/test/fixtures/groups.yml
+++ b/test/fixtures/groups.yml
@@ -1,7 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
+Digital:
+  id: 1
   name: Digital
+  slug: digital
 
-two:
+Technology:
+  id: 2
   name: Technology
+  slug: technology
+  #Need to re-save all to re-generate friendly slug
+  <%#Group.find_each(&:save!)%>
